:showtitle:
:toc: left
:icons: font
:toclevels: 1

= Progenitor Changelog

// WARNING: This file is modified programmatically by `cargo release` as
// configured in release.toml.  DO NOT change the format of the headers or the
// list of raw commits.

// cargo-release: next header goes here (do not change this line)

== Unreleased changes (release date TBD)

https://github.com/oxidecomputer/progenitor/compare/v0.1.1\...HEAD[Full list of commits]

* Add support for a builder-style generation in addition to the positional style (#86)
* Add support for body parameters with application/x-www-form-urlencoded media type (#109)
* Derive Debug for Client and builders for the various operations (#145)

== 0.1.1 (released 2022-05-13)

First published version