@@ -2286,3 +2286,7 @@ pub mod builder {
         }
     }
 }
+
+pub mod prelude {
+    pub use self::super::Client;
+}
