@@ -1052,3 +1052,7 @@ pub mod builder {
         }
     }
 }
+
+pub mod prelude {
+    pub use super::Client;
+}
