@@ -1054,3 +1054,7 @@ pub mod builder {
         }
     }
 }
+
+pub mod prelude {
+    pub use self::super::Client;
+}
