@@ -195,3 +195,7 @@ impl Client {
         }
     }
 }
+
+pub mod prelude {
+    pub use super::Client;
+}
