@@ -83,3 +83,7 @@ impl Client {
         }
     }
 }
+
+pub mod prelude {
+    pub use super::Client;
+}
