@@ -63,3 +63,7 @@ impl Client {
         }
     }
 }
+
+pub mod prelude {
+    pub use super::Client;
+}
