@@ -85,3 +85,7 @@ impl Client {
         }
     }
 }
+
+pub mod prelude {
+    pub use super::Client;
+}
